[gd_scene load_steps=2 format=3 uid="uid://boi8yex1n5md6"]

[ext_resource type="Script" path="res://Scripts/GameScripts/TestingScripts/SessionInitSimulator.gd" id="1_6ylin"]

[node name="SessionInitSimulator" type="Node2D"]
script = ExtResource("1_6ylin")

[node name="IP" type="TextEdit" parent="."]
offset_left = 311.0
offset_top = 57.0
offset_right = 637.0
offset_bottom = 107.0
text = "192.168.1.37"

[node name="Port" type="TextEdit" parent="."]
offset_left = 311.0
offset_top = 132.0
offset_right = 637.0
offset_bottom = 182.0
text = "5555"

[node name="Teams" type="TextEdit" parent="."]
offset_left = 311.0
offset_top = 212.0
offset_right = 637.0
offset_bottom = 262.0
text = "Teams
"

[node name="Map" type="TextEdit" parent="."]
offset_left = 311.0
offset_top = 290.0
offset_right = 637.0
offset_bottom = 340.0
text = "Map"

[node name="AmountPlayers" type="TextEdit" parent="."]
offset_left = 312.0
offset_top = 369.0
offset_right = 638.0
offset_bottom = 419.0
text = "AmountPlayers"

[node name="IsServer" type="TextEdit" parent="."]
offset_left = 314.0
offset_top = 444.0
offset_right = 640.0
offset_bottom = 494.0
text = "Is server"

[node name="ContinueButton" type="Button" parent="."]
offset_left = 374.0
offset_top = 518.0
offset_right = 540.0
offset_bottom = 586.0
text = "Cont"

[node name="Host IP" type="TextEdit" parent="."]
offset_left = 664.0
offset_top = 59.0
offset_right = 990.0
offset_bottom = 109.0
text = "192.168.1.37"

[node name="Host Port" type="TextEdit" parent="."]
offset_left = 664.0
offset_top = 134.0
offset_right = 990.0
offset_bottom = 184.0
text = "5555"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
